{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 43,
  "lineage": "9206863c-5e69-a25f-f06f-ccdfdf6b2fd6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cb445be649c33a4",
            "association_id": "eipassoc-0d218bb27c4caa5d5",
            "domain": "vpc",
            "id": "eipalloc-02cb445be649c33a4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0a12a6634220551a1",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-34-203-112-249.compute-1.amazonaws.com",
            "public_ip": "34.203.112.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed9277fb7eb570c9",
            "arn": "arn:aws:ec2:us-east-1:490237317668:instance/i-0764bece1c49db6b3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0764bece1c49db6b3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-059819c4912610aa8",
            "private_dns": "ip-172-31-87-140.ec2.internal",
            "private_ip": "172.31.87.140",
            "public_dns": "ec2-3-84-2-80.compute-1.amazonaws.com",
            "public_ip": "3.84.2.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-003e255caccd06740",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "launch-wizard-11"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-4d128a6c",
            "tags": {
              "Name": "Terraform"
            },
            "tags_all": {
              "Name": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07d9a09b4c2208452"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490237317668:internet-gateway/igw-0935d20262e8665d5",
            "id": "igw-0935d20262e8665d5",
            "owner_id": "490237317668",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-06ca38a2ee132856f"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02cb445be649c33a4",
            "connectivity_type": "public",
            "id": "nat-0d28c9c1307aac55e",
            "network_interface_id": "eni-0a12a6634220551a1",
            "private_ip": "10.0.1.22",
            "public_ip": "34.203.112.249",
            "subnet_id": "subnet-02def3cd4906dd87a",
            "tags": {
              "Name": "DEV"
            },
            "tags_all": {
              "Name": "DEV"
            }
          },
          "dependencies": [
            "aws_eip.dev",
            "aws_subnet.dev1",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490237317668:network-interface/eni-0e3b00f38a50452df",
            "id": "eni-0e3b00f38a50452df",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:9b:b1:f1:b3:f9",
            "owner_id": "490237317668",
            "private_ip": "10.0.1.199",
            "private_ip_list": [
              "10.0.1.199"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.199"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0cba1b4587546bef6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02def3cd4906dd87a"
          },
          "dependencies": [
            "aws_subnet.dev1",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490237317668:route-table/rtb-06eb04a416a6515b8",
            "id": "rtb-06eb04a416a6515b8",
            "owner_id": "490237317668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0935d20262e8665d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ca38a2ee132856f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490237317668:route-table/rtb-07471997472bf24ce",
            "id": "rtb-07471997472bf24ce",
            "owner_id": "490237317668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d28c9c1307aac55e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_nat"
            },
            "tags_all": {
              "Name": "dev_nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-06ca38a2ee132856f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.dev",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0738de2dcc060c473",
            "route_table_id": "rtb-06eb04a416a6515b8",
            "subnet_id": "subnet-02def3cd4906dd87a"
          },
          "dependencies": [
            "aws_internet_gateway.dev",
            "aws_route_table.dev",
            "aws_subnet.dev1",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006bbcb5238f7f48b",
            "route_table_id": "rtb-07471997472bf24ce",
            "subnet_id": "subnet-03ff212782f361bf9"
          },
          "dependencies": [
            "aws_nat_gateway.dev",
            "aws_route_table.dev_nat",
            "aws_subnet.dev2",
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490237317668:subnet/subnet-02def3cd4906dd87a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02def3cd4906dd87a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490237317668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev1"
            },
            "tags_all": {
              "Name": "dev1"
            },
            "vpc_id": "vpc-06ca38a2ee132856f"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490237317668:subnet/subnet-03ff212782f361bf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ff212782f361bf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490237317668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev2"
            },
            "tags_all": {
              "Name": "dev2"
            },
            "vpc_id": "vpc-06ca38a2ee132856f"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490237317668:subnet/subnet-04fd8f935db43fb43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fd8f935db43fb43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "490237317668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev3"
            },
            "tags_all": {
              "Name": "dev3"
            },
            "vpc_id": "vpc-06ca38a2ee132856f"
          },
          "dependencies": [
            "aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:490237317668:vpc/vpc-06ca38a2ee132856f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c90a217affb7a53",
            "default_route_table_id": "rtb-0fc54f4dfa42f4972",
            "default_security_group_id": "sg-0cba1b4587546bef6",
            "dhcp_options_id": "dopt-aafab1d0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06ca38a2ee132856f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fc54f4dfa42f4972",
            "owner_id": "490237317668",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            }
          }
        }
      ]
    }
  ]
}